--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,19 @@
 spring.application.name=CINEMAX
+
+spring.datasource.url=jdbc:mysql://localhost:3306/cinemax_db
+spring.datasource.username=root
+spring.datasource.password=root
+
+app.jwt.secret=CAMBIA_ESTE_SECRETO_POR_UNO_LARGO_DE_MINIMO_32_CHARS_123456
+app.jwt.expires-in-seconds=3600
+
+app.verification.endpoint=http://localhost:8080/api/auth/verify-email
+app.verification.token-minutes=1440
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.password=qaur jyzc hkkj wxay
+spring.mail.username=cinemaxapp0@gmail.com
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
